--- a/package.json
+++ b/package.json
@@ -21,10 +21,22 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/mongoose": "^9.2.2",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.4.2",
+    "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.2.0",
     "express-handlebars": "^7.0.7",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
